# my-mcp

./: .env.example  .gitignore  CHANGELOG.md  COMANDOS_PRONTOS.bat  COMO_USAR.md  CONTRIBUTING.md  CORRECAO_DEFINITIVA.txt  CORRECAO_ENV.md  CORRECAO_FINAL.txt  CORRECOES_DEPENDENCIAS.md  FAQ.md  FIXES_APPLIED.md  GUIA_COMPLETO.md  GUIA_EXECUCAO.md  INDEX.md  Makefile  POST_REFACTOR_CHECKLIST.md  QUICKSTART.md  QUICKSTART_WEB.md  QUICK_REFERENCE.md  README.md  README_v1.1.md  REFACTOR_DONE.txt  REFACTOR_SUMMARY.md  RESUMO_COMPLETO.txt  RESUMO_CORRECOES.txt  RESUMO_ENV.txt  SETUP_COMPLETO.md  STATUS.txt  SUMARIO.md  SUMMARY.md  TESTES.md  TROUBLESHOOTING.md  WEB_INTERFACE.md  WEB_INTERFACE_V2.md  api_server.py  app.js  check_env.py  clean_project.py  clear_cache.bat  (+34 more)
config/: __init__.py  logging.py  settings.py
core/: __init__.py  connection_monitor.py  registry.py  security.py  server.py
modules/: __init__.py  base.py
modules/calendar/: __init__.py  tools.py
modules/connections/: __init__.py  tools.py
modules/filesystem/: __init__.py  tools.py
modules/tasks/: __init__.py  tools.py
tests/: README.md  __init__.py  quick_test.py  run_all_tests.bat  run_integration_tests.bat  run_tests.py  run_unit_tests.bat  test_security.py  test_tasks.py
tests/integration/: __init__.py  test_api_complete.py
tests/manual/: test_tasks_manual.py
tests/mcp/: __init__.py  test_claude_connection.py
tests/unit/: __init__.py  test_filesystem.py
utils/: __init__.py  validators.py
